// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Icon > should render icon 1`] = `
<DocumentFragment>
  <span
    class="material-symbols"
  >
    folder
  </span>
</DocumentFragment>
`;

exports[`Icon > should render with props 1`] = `
<DocumentFragment>
  <button
    class="material-symbols"
    style="color: red; font-variation-settings: \\"FILL\\" 1, \\"wght\\" 100, \\"GRAD\\" 4, \\"opsz\\" 32; font-size: 32px;"
  >
    folder
  </button>
</DocumentFragment>
`;
